Fixed Table bug where spinner appeared off-center and invisible, re-factored related code

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -278,8 +278,14 @@ body {
     text-align: center;
 }
 
-.spin-div {
-    height: 55px;
+.table-div {
+    text-align: right; 
+    display: inline-block;
+}
+
+.spin-td, .spin-tr {
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
@@ -308,4 +314,8 @@ body {
 
 #toast-container {
     z-index: 1039;
+}
+
+.title-field {
+    display: inline-block;
 }
